Field search changes
