# api/data_explorer/swagger/swagger.yaml
@@ -73,10 +73,10 @@ paths:
       tags:
       - "ExportUrl"
       description: "Creates and returns a signed URL to a GCS zip file of JSON files.\
-        \ The JSON files represent entities to be exported to a Saturn workspace.\
-        \ https://bvdp-saturn-prod.appspot.com/#import-data may be called with the\
-        \ url parameter set to this url. For each JSON file, https://rawls.dsde-prod.broadinstitute.org/#!/entities/create_entity\
-        \ may be called with the JSON as the POST body.\n"
+        \ The JSON files represent entities to be exported to a Terra workspace. https://bvdp-saturn-prod.appspot.com/#import-data\
+        \ may be called with the url parameter set to this url. For each JSON file,\
+        \ https://rawls.dsde-prod.broadinstitute.org/#!/entities/create_entity may\
+        \ be called with the JSON as the POST body.\n"
       operationId: "export_url_post"
       parameters:
       - in: "body"
@@ -174,7 +174,7 @@ definitions:
       authorization_domain:
         type: "string"
         description: "Optional FireCloud authorization domain"
-    description: "Information for sending data to Saturn"
+    description: "Information for sending data to Terra"
     example:
       authorization_domain: "authorization_domain"
       url: "url"
@@ -187,30 +187,30 @@ definitions:
     description: "Dataset fields for field search."
     example:
       fields:
-      - name: "name"
-        description: "description"
+      - is_facet_value: true
         elasticsearch_name: "elasticsearch_name"
-      - name: "name"
-        description: "description"
+        display_text: "display_text"
+      - is_facet_value: true
         elasticsearch_name: "elasticsearch_name"
+        display_text: "display_text"
   Field:
     properties:
-      name:
+      display_text:
         type: "string"
-        description: "Field name, for example, \"Gender\"."
-      description:
-        type: "string"
-        description: "Optional field description."
+        description: "The text displayed in the dropdown."
       elasticsearch_name:
         type: "string"
         description: "The Elasticsearch field name."
+      is_facet_value:
+        type: "boolean"
+        description: "If this is a facet or a facet value field."
     description: "A field. For example, a BigQuery Gender column could include the\
       \ field name \"Gender\", description \"Sex at birth\" and elasticsearch field\
       \ name \"project_id.dataset_id.table_name.Gender\".\n"
     example:
-      name: "name"
-      description: "description"
+      is_facet_value: true
       elasticsearch_name: "elasticsearch_name"
+      display_text: "display_text"
   exportUrlRequest:
     type: "object"
     properties:
